stata file working

--- a/oct_4_2016/effective_sample.ipynb
+++ b/oct_4_2016/effective_sample.ipynb
@@ -312,7 +312,7 @@
     "pv = w / sum(w)\n",
     "\n",
     "# add pv column to df\n",
-    "df = df %>% bind_cols(data.frame('pv' = pv))"
+    "df = df %>% bind_cols(data.frame('w' = w, 'pv' = pv))"
    ]
   },
   {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -440,17 +440,17 @@
        "<table>\n",
        "<thead><tr><th></th><th scope=col>mean_list</th><th scope=col>sd_list</th><th scope=col>wmean_list</th><th scope=col>wsd_list</th><th scope=col>sig_list</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>twoyr</th><td>0.3  </td><td>0.459</td><td>0.32 </td><td>0.468</td><td>     </td></tr>\n",
+       "\t<tr><th scope=row>twoyr</th><td>0.3  </td><td>0.459</td><td>0.32 </td><td>0.467</td><td>     </td></tr>\n",
        "\t<tr><th scope=row>privnp</th><td>0.18 </td><td>0.387</td><td>0.17 </td><td>0.38 </td><td>     </td></tr>\n",
-       "\t<tr><th scope=row>privfp</th><td>0.48        </td><td>0.5         </td><td>0.42        </td><td>0.497       </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>privfp</th><td>0.48        </td><td>0.5         </td><td>0.42        </td><td>0.493       </td><td>p &lt; 0.001</td></tr>\n",
        "\t<tr><th scope=row>openadmp</th><td>0.67 </td><td>0.468</td><td>0.68 </td><td>0.468</td><td>     </td></tr>\n",
-       "\t<tr><th scope=row>efteug</th><td>3587.8      </td><td>6720.371    </td><td>3727.93     </td><td>6490.33     </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>upgrntn</th><td>1743.09     </td><td>3847.638    </td><td>1810.64     </td><td>2999.731    </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>pttot</th><td>1698.56     </td><td>3841.724    </td><td>1629.27     </td><td>3614.65     </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>age25o</th><td>1363.31     </td><td>3856.396    </td><td>1268.47     </td><td>2650.326    </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>ctbapct</th><td>27.04       </td><td>8.563       </td><td>24.08       </td><td>8.45        </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>ctpopdens</th><td>2381.86     </td><td>7807.916    </td><td>900.1       </td><td>3107.001    </td><td>p &lt; 0.001</td></tr>\n",
-       "\t<tr><th scope=row>ctmedianinc</th><td>60.01       </td><td>13.928      </td><td>53.09       </td><td>13.069      </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>efteug</th><td>3587.8      </td><td>6720.371    </td><td>3727.93     </td><td>6488.817    </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>upgrntn</th><td>1743.09     </td><td>3847.638    </td><td>1810.64     </td><td>2998.97     </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>pttot</th><td>1698.56     </td><td>3841.724    </td><td>1629.27     </td><td>3613.986    </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>age25o</th><td>1363.31     </td><td>3856.396    </td><td>1268.47     </td><td>2648.628    </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>ctbapct</th><td>27.04       </td><td>8.563       </td><td>24.08       </td><td>7.915       </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>ctpopdens</th><td>2381.86     </td><td>7807.916    </td><td>900.1       </td><td>2730.907    </td><td>p &lt; 0.001</td></tr>\n",
+       "\t<tr><th scope=row>ctmedianinc</th><td>60.01       </td><td>13.928      </td><td>53.09       </td><td>11.086      </td><td>p &lt; 0.001</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -458,17 +458,17 @@
        "\\begin{tabular}{r|lllll}\n",
        "  & mean\\_list & sd\\_list & wmean\\_list & wsd\\_list & sig\\_list\\\\\n",
        "\\hline\n",
-       "\ttwoyr & 0.3   & 0.459 & 0.32  & 0.468 &      \\\\\n",
+       "\ttwoyr & 0.3   & 0.459 & 0.32  & 0.467 &      \\\\\n",
        "\tprivnp & 0.18  & 0.387 & 0.17  & 0.38  &      \\\\\n",
-       "\tprivfp & 0.48      & 0.5       & 0.42      & 0.497     & p < 0.001\\\\\n",
+       "\tprivfp & 0.48      & 0.5       & 0.42      & 0.493     & p < 0.001\\\\\n",
        "\topenadmp & 0.67  & 0.468 & 0.68  & 0.468 &      \\\\\n",
-       "\tefteug & 3587.8    & 6720.371  & 3727.93   & 6490.33   & p < 0.001\\\\\n",
-       "\tupgrntn & 1743.09   & 3847.638  & 1810.64   & 2999.731  & p < 0.001\\\\\n",
-       "\tpttot & 1698.56   & 3841.724  & 1629.27   & 3614.65   & p < 0.001\\\\\n",
-       "\tage25o & 1363.31   & 3856.396  & 1268.47   & 2650.326  & p < 0.001\\\\\n",
-       "\tctbapct & 27.04     & 8.563     & 24.08     & 8.45      & p < 0.001\\\\\n",
-       "\tctpopdens & 2381.86   & 7807.916  & 900.1     & 3107.001  & p < 0.001\\\\\n",
-       "\tctmedianinc & 60.01     & 13.928    & 53.09     & 13.069    & p < 0.001\\\\\n",
+       "\tefteug & 3587.8    & 6720.371  & 3727.93   & 6488.817  & p < 0.001\\\\\n",
+       "\tupgrntn & 1743.09   & 3847.638  & 1810.64   & 2998.97   & p < 0.001\\\\\n",
+       "\tpttot & 1698.56   & 3841.724  & 1629.27   & 3613.986  & p < 0.001\\\\\n",
+       "\tage25o & 1363.31   & 3856.396  & 1268.47   & 2648.628  & p < 0.001\\\\\n",
+       "\tctbapct & 27.04     & 8.563     & 24.08     & 7.915     & p < 0.001\\\\\n",
+       "\tctpopdens & 2381.86   & 7807.916  & 900.1     & 2730.907  & p < 0.001\\\\\n",
+       "\tctmedianinc & 60.01     & 13.928    & 53.09     & 11.086    & p < 0.001\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -505,17 +505,17 @@
        "31. 24.08\n",
        "32. 900.1\n",
        "33. 53.09\n",
-       "34. 0.468\n",
+       "34. 0.467\n",
        "35. 0.38\n",
-       "36. 0.497\n",
+       "36. 0.493\n",
        "37. 0.468\n",
-       "38. 6490.33\n",
-       "39. 2999.731\n",
-       "40. 3614.65\n",
-       "41. 2650.326\n",
-       "42. 8.45\n",
-       "43. 3107.001\n",
-       "44. 13.069\n",
+       "38. 6488.817\n",
+       "39. 2998.97\n",
+       "40. 3613.986\n",
+       "41. 2648.628\n",
+       "42. 7.915\n",
+       "43. 2730.907\n",
+       "44. 11.086\n",
        "45. ''\n",
        "46. ''\n",
        "47. 'p &lt; 0.001'\n",
@@ -532,17 +532,17 @@
       ],
       "text/plain": [
        "            mean_list sd_list  wmean_list wsd_list sig_list \n",
-       "twoyr       0.3       0.459    0.32       0.468             \n",
+       "twoyr       0.3       0.459    0.32       0.467             \n",
        "privnp      0.18      0.387    0.17       0.38              \n",
-       "privfp      0.48      0.5      0.42       0.497    p < 0.001\n",
+       "privfp      0.48      0.5      0.42       0.493    p < 0.001\n",
        "openadmp    0.67      0.468    0.68       0.468             \n",
-       "efteug      3587.8    6720.371 3727.93    6490.33  p < 0.001\n",
-       "upgrntn     1743.09   3847.638 1810.64    2999.731 p < 0.001\n",
-       "pttot       1698.56   3841.724 1629.27    3614.65  p < 0.001\n",
-       "age25o      1363.31   3856.396 1268.47    2650.326 p < 0.001\n",
-       "ctbapct     27.04     8.563    24.08      8.45     p < 0.001\n",
-       "ctpopdens   2381.86   7807.916 900.1      3107.001 p < 0.001\n",
-       "ctmedianinc 60.01     13.928   53.09      13.069   p < 0.001"
+       "efteug      3587.8    6720.371 3727.93    6488.817 p < 0.001\n",
+       "upgrntn     1743.09   3847.638 1810.64    2998.97  p < 0.001\n",
+       "pttot       1698.56   3841.724 1629.27    3613.986 p < 0.001\n",
+       "age25o      1363.31   3856.396 1268.47    2648.628 p < 0.001\n",
+       "ctbapct     27.04     8.563    24.08      7.915    p < 0.001\n",
+       "ctpopdens   2381.86   7807.916 900.1      2730.907 p < 0.001\n",
+       "ctmedianinc 60.01     13.928   53.09      11.086   p < 0.001"
       ]
      },
      "metadata": {},
@@ -569,8 +569,8 @@
     "    sd_list[[i]] = round(sd(df[[i]]),3)\n",
     "    \n",
     "    # weighted mean/sd\n",
-    "    wmean_list[[i]] = round(weighted.mean(x = df[[i]], w = df[['pv']]),2)\n",
-    "    wsd_list[[i]] = round(sqrt(sum(df[['pv']] * (df[[i]] - mean(df[[i]]))^2)),3)\n",
+    "    wmean_list[[i]] = round(weighted.mean(x = df[[i]], w = df[['w']]),2)\n",
+    "    wsd_list[[i]] = round(sqrt(sum(df[['pv']] * (df[[i]] - wmean_list[[i]])^2)),3)\n",
     "    \n",
     "    # significantly different?\n",
     "    t = (mean_list[[i]] - wmean_list[[i]]) / sqrt(sd_list[[i]] / nrow(df) + wsd_list[[i]] / nrow(df))\n",
